--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset='utf-8'>
 </head>
 <body>
-	Просто некий текст
+	<div>еще некий текст</div>
+	
 	<script src='./dist/bundle.js'></script>
 </body>
 </html>
