directive doesnt work

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 </head>
 <body>
 <div ng-app="app">
-    <nav-menu></nav-menu>
-    <div>
-        <hello></hello>
+    <div ng-controller="headerElementController">
+        <header-element></header-element>
     </div>
 </div>
 <script src='./dist/bundle.js'></script>
