--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div ng-app="app">
-    <div ng-controller="headerElementController">
+    <div>
         <header-element></header-element>
     </div>
 </div>
