can't set data, webpack config

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 <div ng-app="app">
     <div>
-        <header-element></header-element>
+        <header-element>
+            <navElement></navElement>
+        </header-element>
     </div>
 </div>
 <script src='./dist/bundle.js'></script>
