altarix bug fix, make http request in factory and output it in template

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>
         <header-element></header-element>
     </div>
-    <div ng-controller="headerElementController">
+    <div ng-controller="headerElementController as myCtrl">
         <div set-color='red'>
             123
         </div>
